managed to get the .csv import to work